plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
//    id 'war'
}

group = 'com.bekaku.api.spring'
version = '1.0.0'
java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}
repositories {
    mavenCentral()
}

dependencies {
//    Spring and Spring Boot dependencies
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-amqp:3.2.0'
    implementation 'commons-validator:commons-validator:1.7'

    // bug whith springboot version 3.2.0 to be develop by mybatis dev
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

    implementation 'org.jetbrains:annotations:24.1.0'
//    Databases
    implementation 'com.mysql:mysql-connector-j:8.2.0'
    implementation 'com.zaxxer:HikariCP:5.1.0'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3',
            'io.jsonwebtoken:jjwt-orgjson:0.12.3'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    implementation 'joda-time:joda-time:2.12.5'
    implementation 'org.modelmapper:modelmapper:3.2.0'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'org.apache.tika:tika-core:2.9.1'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

//    caching
//    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
//    implementation group: 'org.ehcache', name: 'ehcache', version: '3.10.8'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'org.ehcache:ehcache:3.10.8'
    implementation 'org.jsoup:jsoup:1.16.2'
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.projectlombok:lombok:1.18.30'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}
tasks.register('runGenerateSrc') {
    def url = 'http://localhost:8080/dev/development/generateSrc'
    def body = '{}'
    def content = "content-type:application/json"
    def command = ['curl', '-s', '--request', 'POST', '--data', body, '--header', content, url]
    println "command:" + command
    def proc = command.execute()
    proc.waitFor()
    def jsonstr = proc.in.text
    println jsonstr
}
tasks.register('runDev') {
    dependsOn 'bootRun'
    bootRun.systemProperty('spring.profiles.active', 'dev')
}
tasks.register('runDebug') {
    // ./gradlew bootRun --args='--debug'
}
tasks.register('runProd') {
    dependsOn 'bootRun'
    bootRun.systemProperty('spring.profiles.active', 'prod')
}
tasks.register('runBuild') {
    dependsOn 'bootJar'
    bootRun.systemProperty('spring.profiles.active', 'prod')
}